# ximea_camera

./: .gitignore  .project  CMakeLists.txt  README.md  ximea_camera-scm-1.rockspec
examples/: ros_node_image_publisher.lua  singleImage.lua  stereoImage.lua
lua/: SingleCamera.lua  StereoCamera.lua  Ximea.lua  env.lua  init.lua
ros/examples/: capture_async.lua  capture_mono.lua  capture_stereo.lua  close_open.lua  get_connected_devices.lua  perform_height_analysis.py  set_exposure.lua  trigger_mono.lua  trigger_multi.lua  ximea_client.lua
ros/ximea_client/: XimeaClient.lua  ximeaClient.lua
ros/ximea_client_cpp/: .reciever.cpp.swp  .reciever.h.swp  CMakeLists.txt  package.xml  reciever.cpp  reciever.h
ros/ximea_msgs/: CMakeLists.txt  README.md  package.xml
ros/ximea_msgs/action/: CropBoxStatistics.action  HeightAnalysis.action  SlstudioScan.action  Trigger.action  Trigger2.action
ros/ximea_msgs/msg/: CropBox.msg  HeightAnalysisResponse.msg  ImageArray.msg  StereoPair.msg
ros/ximea_msgs/srv/: Capture.srv  CropBoxStatisticsSetDefaultCrop.srv  GetConnectedDevices.srv  HeightAnalysisSetup.srv  SendCommand.srv  SlstudioSetup.srv  Trigger.srv
ros/ximea_nodes/: CMakeLists.txt  CropBoxStatistics.lua  HeightAnalysis.lua  IoBoard.lua  SlstudioService.lua  XimeaRosCam.lua  mono.lua  mono_old.lua  package.xml  slstudio_service.lua  stereo.lua  ximea_nodes.lua  ximea_ros.lua
ros/ximea_nodes/launch/: ximea_mono.launch
ros/ximea_nodes/x3d/: init.lua  x3d.lua
src/: ximeawrapper.cpp
ws/: .gitignore  ximea_camera.project  ximea_camera.workspace
