<package>
  <name>ximea_client_cpp</name>
  <version>0.0.1</version>
  <description>C++ Client for the Xamla Ximea ROS service</description>
  <maintainer email="info@xamla.com">Xamla</maintainer>
  <license>BSD</license>
  <url type="website">http://www.xamla.com/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ximea_msgs</run_depend>
  <export>
    <metapackage/>
  </export>
</package>

