<package>
  <name>ximea_nodes</name>
  <version>1.0.0</version>
  <description>The Ximea ros nodes package based on lua</description>
  <maintainer email="info@xamla.com">Xamla Team</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ximea_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ximea_msgs</run_depend>
</package>
